change the workspace deps' style
Signed-off-by: Ruihang Xia <waynestxia@gmail.com>

--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -8,7 +8,7 @@ license.workspace = true
 arrow.workspace = true
 chrono.workspace = true
 clap = { version = "4.0", features = ["derive"] }
-client = { workspace = true }
+client.workspace = true
 futures-util.workspace = true
 indicatif = "0.17.1"
 itertools.workspace = true
