--- a/src/datatypes/Cargo.toml
+++ b/src/datatypes/Cargo.toml
@@ -12,11 +12,11 @@ test = []
 arrow-array.workspace = true
 arrow-schema.workspace = true
 arrow.workspace = true
-common-base = { workspace = true }
-common-error = { workspace = true }
-common-macro = { workspace = true }
-common-telemetry = { workspace = true }
-common-time = { workspace = true }
+common-base.workspace = true
+common-error.workspace = true
+common-macro.workspace = true
+common-telemetry.workspace = true
+common-time.workspace = true
 datafusion-common.workspace = true
 enum_dispatch = "0.3"
 num = "0.4"
