--- a/src/log-store/Cargo.toml
+++ b/src/log-store/Cargo.toml
@@ -14,23 +14,23 @@ async-stream.workspace = true
 async-trait.workspace = true
 byteorder = "1.4"
 bytes = "1.1"
-common-base = { workspace = true }
-common-config = { workspace = true }
-common-error = { workspace = true }
-common-macro = { workspace = true }
+common-base.workspace = true
+common-config.workspace = true
+common-error.workspace = true
+common-macro.workspace = true
 common-meta.workspace = true
-common-runtime = { workspace = true }
-common-telemetry = { workspace = true }
+common-runtime.workspace = true
+common-telemetry.workspace = true
 futures-util.workspace = true
 futures.workspace = true
 protobuf = { version = "2", features = ["bytes"] }
-raft-engine = { workspace = true }
+raft-engine.workspace = true
 snafu.workspace = true
-store-api = { workspace = true }
+store-api.workspace = true
 tokio-util.workspace = true
 tokio.workspace = true
 
 [dev-dependencies]
 common-meta = { workspace = true, features = ["testing"] }
-common-test-util = { workspace = true }
+common-test-util.workspace = true
 rand.workspace = true
