--- a/src/meta-srv/Cargo.toml
+++ b/src/meta-srv/Cargo.toml
@@ -9,25 +9,25 @@ mock = []
 
 [dependencies]
 anymap = "1.0.0-beta.2"
-api = { workspace = true }
+api.workspace = true
 async-stream.workspace = true
 async-trait = "0.1"
-catalog = { workspace = true }
-client = { workspace = true }
-common-base = { workspace = true }
-common-catalog = { workspace = true }
-common-error = { workspace = true }
-common-greptimedb-telemetry = { workspace = true }
-common-grpc = { workspace = true }
-common-grpc-expr = { workspace = true }
-common-macro = { workspace = true }
-common-meta = { workspace = true }
-common-procedure = { workspace = true }
-common-runtime = { workspace = true }
-common-telemetry = { workspace = true }
-common-time = { workspace = true }
+catalog.workspace = true
+client.workspace = true
+common-base.workspace = true
+common-catalog.workspace = true
+common-error.workspace = true
+common-greptimedb-telemetry.workspace = true
+common-grpc-expr.workspace = true
+common-grpc.workspace = true
+common-macro.workspace = true
+common-meta.workspace = true
+common-procedure.workspace = true
+common-runtime.workspace = true
+common-telemetry.workspace = true
+common-time.workspace = true
 dashmap = "5.4"
-datatypes = { workspace = true }
+datatypes.workspace = true
 derive_builder.workspace = true
 etcd-client.workspace = true
 futures.workspace = true
@@ -42,11 +42,11 @@ rand.workspace = true
 regex.workspace = true
 serde.workspace = true
 serde_json = "1.0"
-servers = { workspace = true }
+servers.workspace = true
 snafu.workspace = true
-store-api = { workspace = true }
+store-api.workspace = true
 strum.workspace = true
-table = { workspace = true }
+table.workspace = true
 tokio-stream = { version = "0.1", features = ["net"] }
 tokio.workspace = true
 toml.workspace = true
@@ -60,7 +60,7 @@ uuid.workspace = true
 chrono.workspace = true
 client = { workspace = true, features = ["testing"] }
 common-meta = { workspace = true, features = ["testing"] }
-common-procedure-test = { workspace = true }
-session = { workspace = true }
+common-procedure-test.workspace = true
+session.workspace = true
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
