--- a/src/session/Cargo.toml
+++ b/src/session/Cargo.toml
@@ -11,8 +11,8 @@ testing = []
 api.workspace = true
 arc-swap = "1.5"
 auth.workspace = true
-common-catalog = { workspace = true }
-common-telemetry = { workspace = true }
-common-time = { workspace = true }
+common-catalog.workspace = true
+common-telemetry.workspace = true
+common-time.workspace = true
 derive_builder.workspace = true
-sql = { workspace = true }
+sql.workspace = true
