--- a/src/common/datasource/Cargo.toml
+++ b/src/common/datasource/Cargo.toml
@@ -17,14 +17,14 @@ async-compression = { version = "0.3", features = [
 ] }
 async-trait.workspace = true
 bytes = "1.1"
-common-error = { workspace = true }
-common-macro = { workspace = true }
-common-runtime = { workspace = true }
+common-error.workspace = true
+common-macro.workspace = true
+common-runtime.workspace = true
 datafusion.workspace = true
 derive_builder.workspace = true
 futures.workspace = true
 lazy_static.workspace = true
-object-store = { workspace = true }
+object-store.workspace = true
 orc-rust = "0.2"
 paste = "1.0"
 regex = "1.7"
@@ -36,4 +36,4 @@ tokio.workspace = true
 url = "2.3"
 
 [dev-dependencies]
-common-test-util = { workspace = true }
+common-test-util.workspace = true
