--- a/src/common/decimal/Cargo.toml
+++ b/src/common/decimal/Cargo.toml
@@ -6,10 +6,10 @@ license.workspace = true
 
 [dependencies]
 arrow.workspace = true
-bigdecimal = { workspace = true }
-common-error = { workspace = true }
-common-macro = { workspace = true }
-rust_decimal = { workspace = true }
+bigdecimal.workspace = true
+common-error.workspace = true
+common-macro.workspace = true
+rust_decimal.workspace = true
 serde.workspace = true
 serde_json = "1.0"
 snafu.workspace = true
