--- a/src/common/greptimedb-telemetry/Cargo.toml
+++ b/src/common/greptimedb-telemetry/Cargo.toml
@@ -6,19 +6,19 @@ license.workspace = true
 
 [dependencies]
 async-trait.workspace = true
-common-error = { workspace = true }
-common-runtime = { workspace = true }
-common-telemetry = { workspace = true }
-reqwest = { workspace = true }
+common-error.workspace = true
+common-runtime.workspace = true
+common-telemetry.workspace = true
+reqwest.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 tokio.workspace = true
 uuid.workspace = true
 
 [dev-dependencies]
-common-test-util = { workspace = true }
+common-test-util.workspace = true
 hyper = { version = "0.14", features = ["full"] }
 tempfile.workspace = true
 
 [build-dependencies]
-common-version = { workspace = true }
+common-version.workspace = true
