--- a/src/common/macro/Cargo.toml
+++ b/src/common/macro/Cargo.toml
@@ -23,7 +23,7 @@ syn2 = { version = "2.0", package = "syn", features = [
 
 [dev-dependencies]
 arc-swap = "1.0"
-common-query = { workspace = true }
-datatypes = { workspace = true }
+common-query.workspace = true
+datatypes.workspace = true
 snafu.workspace = true
 static_assertions = "1.1.0"
