--- a/src/common/procedure/Cargo.toml
+++ b/src/common/procedure/Cargo.toml
@@ -8,13 +8,13 @@ license.workspace = true
 async-stream.workspace = true
 async-trait.workspace = true
 backon = "0.4"
-common-error = { workspace = true }
-common-macro = { workspace = true }
-common-runtime = { workspace = true }
-common-telemetry = { workspace = true }
+common-error.workspace = true
+common-macro.workspace = true
+common-runtime.workspace = true
+common-telemetry.workspace = true
 futures.workspace = true
 humantime-serde.workspace = true
-object-store = { workspace = true }
+object-store.workspace = true
 serde.workspace = true
 serde_json = "1.0"
 smallvec.workspace = true
@@ -23,5 +23,5 @@ tokio.workspace = true
 uuid.workspace = true
 
 [dev-dependencies]
-common-test-util = { workspace = true }
+common-test-util.workspace = true
 futures-util.workspace = true
