--- a/src/common/query/Cargo.toml
+++ b/src/common/query/Cargo.toml
@@ -5,16 +5,16 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
-api = { workspace = true }
+api.workspace = true
 async-trait.workspace = true
-common-error = { workspace = true }
-common-macro = { workspace = true }
-common-recordbatch = { workspace = true }
-common-time = { workspace = true }
+common-error.workspace = true
+common-macro.workspace = true
+common-recordbatch.workspace = true
+common-time.workspace = true
 datafusion-common.workspace = true
 datafusion-expr.workspace = true
 datafusion.workspace = true
-datatypes = { workspace = true }
+datatypes.workspace = true
 serde.workspace = true
 snafu.workspace = true
 sqlparser.workspace = true
@@ -22,5 +22,5 @@ sqlparser_derive = "0.1"
 statrs = "0.16"
 
 [dev-dependencies]
-common-base = { workspace = true }
+common-base.workspace = true
 tokio.workspace = true
