--- a/src/common/substrait/Cargo.toml
+++ b/src/common/substrait/Cargo.toml
@@ -8,28 +8,28 @@ license.workspace = true
 async-recursion = "1.0"
 async-trait.workspace = true
 bytes = "1.1"
-catalog = { workspace = true }
-common-catalog = { workspace = true }
-common-error = { workspace = true }
-common-macro = { workspace = true }
-common-telemetry = { workspace = true }
+catalog.workspace = true
+common-catalog.workspace = true
+common-error.workspace = true
+common-macro.workspace = true
+common-telemetry.workspace = true
 datafusion-common.workspace = true
 datafusion-expr.workspace = true
 datafusion-substrait.workspace = true
 datafusion.workspace = true
-datatypes = { workspace = true }
+datatypes.workspace = true
 futures = "0.3"
-promql = { workspace = true }
+promql.workspace = true
 prost.workspace = true
-session = { workspace = true }
+session.workspace = true
 snafu.workspace = true
-table = { workspace = true }
+table.workspace = true
 
 [dependencies.substrait_proto]
 package = "substrait"
 version = "0.17"
 
 [dev-dependencies]
-datatypes = { workspace = true }
-table = { workspace = true }
+datatypes.workspace = true
+table.workspace = true
 tokio.workspace = true
