--- a/src/common/time/Cargo.toml
+++ b/src/common/time/Cargo.toml
@@ -8,8 +8,8 @@ license.workspace = true
 arrow.workspace = true
 chrono-tz = "0.8"
 chrono.workspace = true
-common-error = { workspace = true }
-common-macro = { workspace = true }
+common-error.workspace = true
+common-macro.workspace = true
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 snafu.workspace = true
