--- a/src/file-engine/Cargo.toml
+++ b/src/file-engine/Cargo.toml
@@ -10,28 +10,28 @@ test = ["common-test-util"]
 
 [dependencies]
 async-trait = "0.1"
-common-catalog = { workspace = true }
-common-datasource = { workspace = true }
-common-error = { workspace = true }
-common-macro = { workspace = true }
-common-procedure = { workspace = true }
-common-query = { workspace = true }
-common-recordbatch = { workspace = true }
-common-telemetry = { workspace = true }
+common-catalog.workspace = true
+common-datasource.workspace = true
+common-error.workspace = true
+common-macro.workspace = true
+common-procedure.workspace = true
+common-query.workspace = true
+common-recordbatch.workspace = true
+common-telemetry.workspace = true
 common-test-util = { workspace = true, optional = true }
-common-time = { workspace = true }
+common-time.workspace = true
 datafusion.workspace = true
-datatypes = { workspace = true }
+datatypes.workspace = true
 futures.workspace = true
-object-store = { workspace = true }
+object-store.workspace = true
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 snafu.workspace = true
-store-api = { workspace = true }
-table = { workspace = true }
+store-api.workspace = true
+table.workspace = true
 tokio.workspace = true
 
 [dev-dependencies]
-api = { workspace = true }
-common-procedure-test = { workspace = true }
-common-test-util = { workspace = true }
+api.workspace = true
+common-procedure-test.workspace = true
+common-test-util.workspace = true
