--- a/src/meta-client/Cargo.toml
+++ b/src/meta-client/Cargo.toml
@@ -5,27 +5,27 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
-api = { workspace = true }
+api.workspace = true
 async-trait = "0.1"
 chrono.workspace = true
-common-error = { workspace = true }
-common-grpc = { workspace = true }
-common-macro = { workspace = true }
-common-meta = { workspace = true }
-common-telemetry = { workspace = true }
+common-error.workspace = true
+common-grpc.workspace = true
+common-macro.workspace = true
+common-meta.workspace = true
+common-telemetry.workspace = true
 etcd-client.workspace = true
 humantime-serde.workspace = true
 rand.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 snafu.workspace = true
-table = { workspace = true }
+table.workspace = true
 tokio-stream = { version = "0.1", features = ["net"] }
 tokio.workspace = true
 tonic.workspace = true
 
 [dev-dependencies]
-datatypes = { workspace = true }
+datatypes.workspace = true
 futures = "0.3"
 meta-srv = { workspace = true, features = ["mock"] }
 tower = "0.4"
