--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -19,30 +19,30 @@ async-stream.workspace = true
 async-trait = "0.1"
 bytes = "1.4"
 chrono.workspace = true
-common-base = { workspace = true }
-common-catalog = { workspace = true }
-common-datasource = { workspace = true }
-common-error = { workspace = true }
-common-macro = { workspace = true }
-common-procedure = { workspace = true }
-common-query = { workspace = true }
-common-recordbatch = { workspace = true }
-common-runtime = { workspace = true }
-common-telemetry = { workspace = true }
+common-base.workspace = true
+common-catalog.workspace = true
+common-datasource.workspace = true
+common-error.workspace = true
+common-macro.workspace = true
+common-procedure.workspace = true
+common-query.workspace = true
+common-recordbatch.workspace = true
+common-runtime.workspace = true
+common-telemetry.workspace = true
 common-test-util = { workspace = true, optional = true }
-common-time = { workspace = true }
+common-time.workspace = true
 dashmap = "5.4"
 datafusion-common.workspace = true
 datafusion-expr.workspace = true
 datafusion.workspace = true
-datatypes = { workspace = true }
+datatypes.workspace = true
 futures.workspace = true
-humantime-serde = { workspace = true }
+humantime-serde.workspace = true
 lazy_static = "1.4"
 log-store = { workspace = true, optional = true }
 memcomparable = "0.2"
 moka = { workspace = true, features = ["sync"] }
-object-store = { workspace = true }
+object-store.workspace = true
 parquet = { workspace = true, features = ["async"] }
 paste.workspace = true
 prometheus.workspace = true
@@ -53,14 +53,14 @@ serde_json.workspace = true
 serde_with = "3"
 smallvec.workspace = true
 snafu.workspace = true
-store-api = { workspace = true }
+store-api.workspace = true
 strum.workspace = true
-table = { workspace = true }
+table.workspace = true
 tokio-util.workspace = true
 tokio.workspace = true
 uuid.workspace = true
 
 [dev-dependencies]
-common-procedure-test = { workspace = true }
-common-test-util = { workspace = true }
-log-store = { workspace = true }
+common-procedure-test.workspace = true
+common-test-util.workspace = true
+log-store.workspace = true
