--- a/src/operator/Cargo.toml
+++ b/src/operator/Cargo.toml
@@ -8,51 +8,51 @@ license.workspace = true
 testing = []
 
 [dependencies]
-api = { workspace = true }
+api.workspace = true
 async-compat = "0.2"
 async-trait = "0.1"
 auth.workspace = true
-catalog = { workspace = true }
+catalog.workspace = true
 chrono.workspace = true
-client = { workspace = true }
-common-base = { workspace = true }
-common-catalog = { workspace = true }
-common-datasource = { workspace = true }
-common-error = { workspace = true }
-common-grpc-expr = { workspace = true }
-common-macro = { workspace = true }
-common-meta = { workspace = true }
-common-query = { workspace = true }
-common-recordbatch = { workspace = true }
-common-runtime = { workspace = true }
-common-telemetry = { workspace = true }
-common-time = { workspace = true }
+client.workspace = true
+common-base.workspace = true
+common-catalog.workspace = true
+common-datasource.workspace = true
+common-error.workspace = true
+common-grpc-expr.workspace = true
+common-macro.workspace = true
+common-meta.workspace = true
+common-query.workspace = true
+common-recordbatch.workspace = true
+common-runtime.workspace = true
+common-telemetry.workspace = true
+common-time.workspace = true
 datafusion-common.workspace = true
 datafusion-expr.workspace = true
 datafusion.workspace = true
-datatypes = { workspace = true }
-file-engine = { workspace = true }
+datatypes.workspace = true
+file-engine.workspace = true
 futures = "0.3"
 futures-util.workspace = true
 lazy_static.workspace = true
-meta-client = { workspace = true }
+meta-client.workspace = true
 meter-core.workspace = true
 meter-macros.workspace = true
-object-store = { workspace = true }
-partition = { workspace = true }
+object-store.workspace = true
+partition.workspace = true
 prometheus.workspace = true
-query = { workspace = true }
+query.workspace = true
 regex.workspace = true
 serde.workspace = true
 serde_json = "1.0"
-servers = { workspace = true }
-session = { workspace = true }
+servers.workspace = true
+session.workspace = true
 snafu.workspace = true
-sql = { workspace = true }
-sqlparser = { workspace = true }
-storage = { workspace = true }
-store-api = { workspace = true }
-substrait = { workspace = true }
-table = { workspace = true }
+sql.workspace = true
+sqlparser.workspace = true
+storage.workspace = true
+store-api.workspace = true
+substrait.workspace = true
+table.workspace = true
 tokio.workspace = true
 tonic.workspace = true
