--- a/src/partition/Cargo.toml
+++ b/src/partition/Cargo.toml
@@ -5,24 +5,24 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
-api = { workspace = true }
+api.workspace = true
 async-trait = "0.1"
-common-catalog = { workspace = true }
-common-error = { workspace = true }
-common-macro = { workspace = true }
-common-meta = { workspace = true }
-common-query = { workspace = true }
-common-telemetry = { workspace = true }
+common-catalog.workspace = true
+common-error.workspace = true
+common-macro.workspace = true
+common-meta.workspace = true
+common-query.workspace = true
+common-telemetry.workspace = true
 datafusion-common.workspace = true
 datafusion-expr.workspace = true
 datafusion.workspace = true
-datatypes = { workspace = true }
+datatypes.workspace = true
 lazy_static.workspace = true
-meta-client = { workspace = true }
+meta-client.workspace = true
 moka = { workspace = true, features = ["future"] }
 prometheus.workspace = true
 serde.workspace = true
 serde_json = "1.0"
 snafu.workspace = true
-store-api = { workspace = true }
-table = { workspace = true }
+store-api.workspace = true
+table.workspace = true
