--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -12,7 +12,7 @@ testing = []
 
 [dependencies]
 aide = { version = "0.9", features = ["axum"] }
-api = { workspace = true }
+api.workspace = true
 arrow-flight.workspace = true
 async-trait = "0.1"
 auth.workspace = true
@@ -20,25 +20,25 @@ axum = { version = "0.6", features = ["headers"] }
 axum-macros = "0.3.8"
 base64.workspace = true
 bytes = "1.2"
-catalog = { workspace = true }
+catalog.workspace = true
 chrono.workspace = true
-common-base = { workspace = true }
-common-catalog = { workspace = true }
-common-error = { workspace = true }
-common-grpc = { workspace = true }
-common-grpc-expr = { workspace = true }
-common-macro = { workspace = true }
+common-base.workspace = true
+common-catalog.workspace = true
+common-error.workspace = true
+common-grpc-expr.workspace = true
+common-grpc.workspace = true
+common-macro.workspace = true
 common-mem-prof = { workspace = true, optional = true }
-common-meta = { workspace = true }
-common-query = { workspace = true }
-common-recordbatch = { workspace = true }
-common-runtime = { workspace = true }
-common-telemetry = { workspace = true }
-common-time = { workspace = true }
+common-meta.workspace = true
+common-query.workspace = true
+common-recordbatch.workspace = true
+common-runtime.workspace = true
+common-telemetry.workspace = true
+common-time.workspace = true
 datafusion-common.workspace = true
 datafusion-expr.workspace = true
 datafusion.workspace = true
-datatypes = { workspace = true }
+datatypes.workspace = true
 derive_builder.workspace = true
 digest = "0.10"
 futures = "0.3"
@@ -69,7 +69,7 @@ pprof = { version = "0.11", features = [
 prometheus.workspace = true
 promql-parser = "0.1.1"
 prost.workspace = true
-query = { workspace = true }
+query.workspace = true
 rand.workspace = true
 regex.workspace = true
 rust-embed = { version = "6.6", features = ["debug-embed"] }
@@ -79,13 +79,13 @@ schemars = "0.8"
 secrecy = { version = "0.8", features = ["serde", "alloc"] }
 serde.workspace = true
 serde_json = "1.0"
-session = { workspace = true }
+session.workspace = true
 sha1 = "0.10"
 snafu.workspace = true
 snap = "1"
-sql = { workspace = true }
+sql.workspace = true
 strum.workspace = true
-table = { workspace = true }
+table.workspace = true
 tokio-rustls = "0.24"
 tokio-stream = { version = "0.1", features = ["net"] }
 tokio.workspace = true
@@ -101,9 +101,9 @@ tikv-jemalloc-ctl = { version = "0.5", features = ["use_std"] }
 auth = { workspace = true, features = ["testing"] }
 axum-test-helper = { git = "https://github.com/sunng87/axum-test-helper.git", branch = "patch-1" }
 catalog = { workspace = true, features = ["testing"] }
-client = { workspace = true }
-common-base = { workspace = true }
-common-test-util = { workspace = true }
+client.workspace = true
+common-base.workspace = true
+common-test-util.workspace = true
 mysql_async = { git = "https://github.com/blackbeam/mysql_async.git", rev = "32c6f2a986789f97108502c2d0c755a089411b66", default-features = false, features = [
     "default-rustls",
 ] }
@@ -112,7 +112,7 @@ rustls = { version = "0.21", features = ["dangerous_configuration"] }
 script = { workspace = true, features = ["python"] }
 serde_json = "1.0"
 session = { workspace = true, features = ["testing"] }
-table = { workspace = true }
+table.workspace = true
 tokio-postgres = "0.7"
 tokio-postgres-rustls = "0.10"
 tokio-test = "0.4"
