--- a/src/storage/Cargo.toml
+++ b/src/storage/Cargo.toml
@@ -13,25 +13,25 @@ async-compat = "0.2"
 async-stream.workspace = true
 async-trait = "0.1"
 bytes = "1.1"
-common-base = { workspace = true }
-common-datasource = { workspace = true }
-common-error = { workspace = true }
-common-macro = { workspace = true }
-common-query = { workspace = true }
-common-recordbatch = { workspace = true }
-common-runtime = { workspace = true }
-common-telemetry = { workspace = true }
-common-time = { workspace = true }
+common-base.workspace = true
+common-datasource.workspace = true
+common-error.workspace = true
+common-macro.workspace = true
+common-query.workspace = true
+common-recordbatch.workspace = true
+common-runtime.workspace = true
+common-telemetry.workspace = true
+common-time.workspace = true
 datafusion-common.workspace = true
 datafusion-expr.workspace = true
 datafusion-physical-expr.workspace = true
 datafusion.workspace = true
-datatypes = { workspace = true }
+datatypes.workspace = true
 futures-util.workspace = true
 futures.workspace = true
 itertools.workspace = true
 lazy_static.workspace = true
-object-store = { workspace = true }
+object-store.workspace = true
 parquet = { workspace = true, features = ["async"] }
 paste.workspace = true
 prometheus.workspace = true
@@ -40,8 +40,8 @@ regex = "1.5"
 serde.workspace = true
 serde_json = "1.0"
 snafu.workspace = true
-store-api = { workspace = true }
-table = { workspace = true }
+store-api.workspace = true
+table.workspace = true
 tokio-util.workspace = true
 tokio.workspace = true
 tonic.workspace = true
@@ -49,11 +49,11 @@ uuid.workspace = true
 
 [dev-dependencies]
 atomic_float = "0.1"
-common-config = { workspace = true }
-common-test-util = { workspace = true }
+common-config.workspace = true
+common-test-util.workspace = true
 criterion = "0.3"
 datatypes = { workspace = true, features = ["test"] }
-log-store = { workspace = true }
+log-store.workspace = true
 rand.workspace = true
 
 [build-dependencies]
