--- a/src/store-api/Cargo.toml
+++ b/src/store-api/Cargo.toml
@@ -5,17 +5,17 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
-api = { workspace = true }
+api.workspace = true
 aquamarine.workspace = true
 async-trait.workspace = true
 bytes = "1.1"
-common-base = { workspace = true }
-common-error = { workspace = true }
-common-macro = { workspace = true }
-common-query = { workspace = true }
-common-recordbatch = { workspace = true }
-common-time = { workspace = true }
-datatypes = { workspace = true }
+common-base.workspace = true
+common-error.workspace = true
+common-macro.workspace = true
+common-query.workspace = true
+common-recordbatch.workspace = true
+common-time.workspace = true
+datatypes.workspace = true
 derive_builder.workspace = true
 futures.workspace = true
 serde.workspace = true
