--- a/src/table/Cargo.toml
+++ b/src/table/Cargo.toml
@@ -11,21 +11,21 @@ testing = []
 anymap = "1.0.0-beta.2"
 async-trait = "0.1"
 chrono.workspace = true
-common-base = { workspace = true }
-common-catalog = { workspace = true }
-common-datasource = { workspace = true }
-common-error = { workspace = true }
-common-macro = { workspace = true }
-common-procedure = { workspace = true }
-common-query = { workspace = true }
-common-recordbatch = { workspace = true }
-common-telemetry = { workspace = true }
-common-time = { workspace = true }
+common-base.workspace = true
+common-catalog.workspace = true
+common-datasource.workspace = true
+common-error.workspace = true
+common-macro.workspace = true
+common-procedure.workspace = true
+common-query.workspace = true
+common-recordbatch.workspace = true
+common-telemetry.workspace = true
+common-time.workspace = true
 datafusion-common.workspace = true
 datafusion-expr.workspace = true
 datafusion-physical-expr.workspace = true
 datafusion.workspace = true
-datatypes = { workspace = true }
+datatypes.workspace = true
 derive_builder.workspace = true
 futures.workspace = true
 humantime = "2.1"
@@ -33,11 +33,11 @@ humantime-serde.workspace = true
 paste = "1.0"
 serde.workspace = true
 snafu.workspace = true
-store-api = { workspace = true }
+store-api.workspace = true
 tokio.workspace = true
 
 [dev-dependencies]
-common-test-util = { workspace = true }
+common-test-util.workspace = true
 parquet = { workspace = true, features = ["async"] }
 serde_json.workspace = true
 tokio-util = { version = "0.7", features = ["compat"] }
