--- a/tests-integration/Cargo.toml
+++ b/tests-integration/Cargo.toml
@@ -8,38 +8,38 @@ license.workspace = true
 dashboard = []
 
 [dependencies]
-api = { workspace = true }
+api.workspace = true
 async-trait = "0.1"
 auth.workspace = true
 axum = "0.6"
 axum-test-helper = { git = "https://github.com/sunng87/axum-test-helper.git", branch = "patch-1" }
-catalog = { workspace = true }
+catalog.workspace = true
 chrono.workspace = true
 client = { workspace = true, features = ["testing"] }
 cmd.workspace = true
-common-base = { workspace = true }
-common-catalog = { workspace = true }
-common-config = { workspace = true }
-common-error = { workspace = true }
-common-grpc = { workspace = true }
+common-base.workspace = true
+common-catalog.workspace = true
+common-config.workspace = true
+common-error.workspace = true
+common-grpc.workspace = true
 common-meta = { workspace = true, features = ["testing"] }
-common-procedure = { workspace = true }
-common-query = { workspace = true }
-common-recordbatch = { workspace = true }
-common-runtime = { workspace = true }
-common-telemetry = { workspace = true }
-common-test-util = { workspace = true }
+common-procedure.workspace = true
+common-query.workspace = true
+common-recordbatch.workspace = true
+common-runtime.workspace = true
+common-telemetry.workspace = true
+common-test-util.workspace = true
 datanode = { workspace = true, features = ["testing"] }
-datatypes = { workspace = true }
+datatypes.workspace = true
 dotenv = "0.15"
 frontend = { workspace = true, features = ["testing"] }
 futures.workspace = true
-meta-client = { workspace = true }
+meta-client.workspace = true
 meta-srv = { workspace = true, features = ["mock"] }
-object-store = { workspace = true }
+object-store.workspace = true
 once_cell.workspace = true
-operator = { workspace = true }
-query = { workspace = true }
+operator.workspace = true
+query.workspace = true
 rand.workspace = true
 rstest = "0.17"
 rstest_reuse = "0.5"
@@ -47,17 +47,17 @@ secrecy = "0.8"
 serde.workspace = true
 serde_json = "1.0"
 servers = { workspace = true, features = ["testing"] }
-session = { workspace = true }
+session.workspace = true
 snafu.workspace = true
-sql = { workspace = true }
+sql.workspace = true
 sqlx = { version = "0.6", features = [
     "runtime-tokio-rustls",
     "mysql",
     "postgres",
     "chrono",
 ] }
-substrait = { workspace = true }
-table = { workspace = true }
+substrait.workspace = true
+table.workspace = true
 tempfile.workspace = true
 tokio.workspace = true
 tonic.workspace = true
@@ -69,10 +69,10 @@ datafusion-expr.workspace = true
 datafusion.workspace = true
 itertools.workspace = true
 opentelemetry-proto.workspace = true
-partition = { workspace = true }
+partition.workspace = true
 paste.workspace = true
 prost.workspace = true
-script = { workspace = true }
+script.workspace = true
 session = { workspace = true, features = ["testing"] }
-store-api = { workspace = true }
+store-api.workspace = true
 tokio-postgres = "0.7"
