--- a/tests/runner/Cargo.toml
+++ b/tests/runner/Cargo.toml
@@ -7,13 +7,13 @@ license.workspace = true
 [dependencies]
 async-trait = "0.1"
 clap = { version = "4.0", features = ["derive"] }
-client = { workspace = true }
-common-base = { workspace = true }
-common-error = { workspace = true }
-common-grpc = { workspace = true }
-common-query = { workspace = true }
-common-recordbatch = { workspace = true }
-common-time = { workspace = true }
+client.workspace = true
+common-base.workspace = true
+common-error.workspace = true
+common-grpc.workspace = true
+common-query.workspace = true
+common-recordbatch.workspace = true
+common-time.workspace = true
 serde.workspace = true
 sqlness = { version = "0.5" }
 tinytemplate = "1.2"
